--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>California Wildfires Dashboard</title>
+    <title>Wildfires Dashboard</title>
 
   <!-- Leaflet CSS & JS-->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -28,13 +28,11 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   </head>
   <body>
-    <div class="container">
-      <!-- https://media.giphy.com/media/1QiMXaDe9cKFlL0T1d/giphy.gif -->
-      <!-- https://media.giphy.com/media/3o85xJY1FaLzqeoBGw/giphy.gif -->
+    <div class="container">	
       <div class="row">
-        <div class="col-md-12 jumbotron text-center" style = "background-image: url(https://c.tenor.com/FxCHX7p8oXsAAAAC/flames-flaming.gif); background-size: 100%;">
-          <h1 style= "color: #000000;">2021 US Wildfires Analysis Dashboard</h1>
-          <p style= "color: #000000;">Use the interactive map below to explore wildfire dataset</p>
+        <div class="col-md-12 jumbotron text-center" style = "background-image: url(https://media.giphy.com/media/3o85xJY1FaLzqeoBGw/giphy.gif); background-size: 100%;">
+          <h1 style= "color: #ffffff;">2021 US Wildfires Analysis Dashboard</h1>
+          <!--<p style= "color: #000000;">Use the interactive map below to explore wildfire dataset</p>-->
         </div>
       </div>
       <div class="row">
