--- a/data.html
+++ b/data.html
@@ -11,6 +11,15 @@
 </head>
 
 <body>
+
+ <div class="container">	
+    <div class="row">
+      <div class="col-md-12 jumbotron text-center" style = "background-image: url(https://media.giphy.com/media/3o85xJY1FaLzqeoBGw/giphy.gif); background-size: 100%;">
+         <h1 style= "color: #ffffff;">2021 US Wildfire Data</h1>
+          
+       </div>
+      </div>
+    </div>	
   <div class="wrapper">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -21,18 +30,15 @@
         </div>
       </div>
     </nav>
-    <div class="hero text-center">
-      <h1>Widfire Data</h1>
-      
-    </div>
+
 
         <div class="col-md-10">
           <div id="table-area" class="">
-            <table id="ufo-table" class="table table-striped" background = "static/images/index.jfif" >
+            <table id="ufo-table" class="table table-striped">
               <thead>
                 <tr>
                   <th class="table-head">Index</th>
-                  <th class="table-head">Aces Burned</th>
+                  <th class="table-head">Acres Burned</th>
                   <th class="table-head">Fire Cause</th>
                   <th class="table-head">FireDiscoveryDateTime</th>
                   <th class="table-head">FireOutDateTime</th>
