--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!--Bootstrap-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style1.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   </head>
   <body>
